api work done, weather card edited

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 {#    <link rel="stylesheet" href="/resources/demos/style.css">#}
     <script src="https://kit.fontawesome.com/2b094273ea.js" crossorigin="anonymous"></script>
-
+     <link rel="icon" href="{% static 'favicon.ico' %}">
     <title>Pandora</title>
   </head>
   <body style="background: white">
