weather api done, some design work

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
 {#    <link rel="stylesheet" href="/resources/demos/style.css">#}
     <script src="https://kit.fontawesome.com/2b094273ea.js" crossorigin="anonymous"></script>
      <link rel="icon" href="{% static 'favicon.ico' %}">
+      {% block heading %}
+      {% endblock %}
     <title>Pandora</title>
   </head>
   <body style="background: white">
