--- a/templates/pdf-template.html
+++ b/templates/pdf-template.html
@@ -39,12 +39,12 @@
     		<tr>
     			<th><b> Product name</b></th>
                 <th><b> Product price </b></th>
-    			<th><b> Product image </b></th>
+    			<th><b> Product type </b></th>
     		</tr>
     		<tr style="margin-left: 7em">
     			<td>{{product.product_name}}</td>
     			<td style="margin-left: 3em">{{product.product_price}}</td>
-                <td>{{product.product_image.url}}</td>
+                <td style="margin-left: 3em">{{product.product_type}}</td>
     		</tr>
 
     </table>
