--- a/templates/products.html
+++ b/templates/products.html
@@ -49,21 +49,8 @@
 </footer>
 {% endblock %}
 
+<footer style="background: 	#ffb3cb;height: 40px; text-align: center; color: black; padding-top: 5px;position: relative; width: 100%">
+       © 2020 Copyright: Pandora
+</footer>
 
 
-{#    <div class="hotel_card">#}
-{#    <div class="card mb-3" style="max-width: 1240px; height: 310px">#}
-{#      <div class="row no-gutters">#}
-{#        <div class="col-md-4">#}
-{#          <img src="{{ product.product_image.url }}" class="card-img" alt="Product image" style="height: 250px; width: 400px;">#}
-{#        </div>#}
-{#        <div class="col-md-8">#}
-{#          <div class="card-body">#}
-{#            <h5 class="card-title"><a href="#" style="padding-left: 5%;padding-top: 0%;padding-bottom: 0%"> {{ product.product_name }} </a></h5>#}
-{#            <p class="card-text" style="padding-left: 5%;padding-top: 0%;padding-bottom: 0%;font-size: 40px;" >   {{ product.product_price}} <img src="{% static 'images/malinovcic.png' %}">, {{ product.product_type }} </p>#}
-{#            <p class="card-text" style="padding-left: 5%;padding-top: 0%;padding-bottom: 0%" ><small class="text-muted"> {{ product.materials }} </small></p>#}
-{#          </div>#}
-{#        </div>#}
-{#      </div>#}
-{#    </div>#}
-{#    </div>#}
