--- a/templates/charts.html
+++ b/templates/charts.html
@@ -106,5 +106,9 @@
 {% endblock %}
 </html>
 
+<footer style="margin-top: 1em;background: 	#048c8c;height: 40px; text-align: center; color: black; padding-top: 5px;position: relative; width: 100%">
+       © 2020 Copyright: Pandora
+</footer>
+
 
 
