--- a/templates/product-details.html
+++ b/templates/product-details.html
@@ -99,3 +99,6 @@
 </div>
 
 {% endblock %}
+<footer style="background: 	#e0c0e1;height: 40px; text-align: center; color: black; padding-top: 5px;position: relative; width: 100%">
+       © 2020 Copyright: Pandora
+</footer>
